fix scrollbar height

--- a/frontend/src/app/search-combinations/filters/filters.component.scss
+++ b/frontend/src/app/search-combinations/filters/filters.component.scss
@@ -28,3 +28,8 @@
     height: calc(100vh - 5.5rem);
   }
 }
+@media screen and (max-height: 800px) {
+  .scrollable {
+    height: calc(100vh - 8.5rem);
+  }
+}
